k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: client
          image: kodefoundry/multi-client
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "64Mi"
              cpu: "500m"
