k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      cache-service: redis
  template:
    metadata:
      labels:
        cache-service: redis
    spec:
      containers:
        - name: redis
          image: redis
          resources:
              limits:
                memory: "128Mi"
                cpu: "500M"
          ports:
            - containerPort: 6379
