k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: kodefoundry/complex-server
          resources:
              limits:
                memory: "64Mi"
                cpu: "500m"
          ports:
            - containerPort: 5000
